<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.profile.ProfilMainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/header_profile_fragment"
        android:layout_width="match_parent"
        android:background="@color/warm_purple"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="9"
                android:gravity="center"
                android:text="Profile"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/fr_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_edit" />
            </FrameLayout>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/header_profile_fragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="14dp"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_image_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/background_oval_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/item_pizza_caprize"
                    />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_name_tabel_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/form_username_profile"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/fl_image_profile" />

                <EditText
                    android:id="@+id/et_name_text_profile"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/bg_input_text_edit"
                    android:hint="Nama Lengkap"
                    android:layout_marginHorizontal="8dp"
                    android:paddingHorizontal="14dp"
                    android:layout_marginBottom="32sp"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name_tabel_profile"/>

            <TextView
                android:id="@+id/tv_email_tabel_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/tabel_email_profile"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/et_name_text_profile" />

            <EditText
                android:id="@+id/et_email_text_profile"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bg_input_text_edit"
                android:hint="@string/email_profile_hint"
                android:layout_marginBottom="32dp"
                android:paddingHorizontal="14dp"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_tabel_profile"/>

            <TextView
                android:id="@+id/tv_nomor_tabel_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/tv_table_nomor_profile"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/et_email_text_profile" />

            <EditText
                android:id="@+id/et_nomor_text_profile"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/bg_input_text_edit"
                android:hint="@string/et_nomor_profile_hint"
                android:layout_marginBottom="32dp"
                android:paddingHorizontal="14dp"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_nomor_tabel_profile"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>